Added expiration for background after 12 hours

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             Hi <span>👋</span>
         </h1>
         <div class="container">
-            <a href="https://mail.proton.me/u/0/inbox" target="_blank"><img class="responsive-img" src="protonmail.svg" width="75""><br/> Proton Mail</a>
-            <a href="https://reddit.com" target="_blank"><img class="responsive-img" src="reddit-seeklogo.svg" width="75"><br /> Reddit</a>
+            <a href="https://mail.proton.me/u/0/inbox" target="_blank"><img src="protonmail.svg" width="75""><br/> Proton Mail</a>
+            <a href="https://reddit.com" target="_blank"><img src="reddit-seeklogo.svg" width="75"><br /> Reddit</a>
         </div>
     </div>
     <script src="script.js"></script>
